# Alpheratz

./: .gitignore  .stylelintrc.json  AGENTS.md  eslint.config.js  index.html  knip.json  lefthook.yml  package-lock.json  package.json  vite.config.ts
.agents/skills/tauri-tech-stack-tools/: SKILL.md
next/alpheratz-winui/src/: files.txt  short_files.txt
next/alpheratz-winui/tasks/: scaffold_app.ps1  scaffold_infra.ps1  scaffold_presentation.ps1  todo.md
next/alpheratz-winui/tools/: scaffold.py
src/: App.css  App.dark.css  App.light.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  models.rs  orientation.rs  pdq_hash.rs  pdq_hash_dct.rs  phash.rs  scanner.rs  similar_photo_match.rs  utils.rs
src/app/: App.tsx  main.tsx
src/app/hooks/: useBulkPhotoActions.ts  useDisplayPhotoData.ts  usePhotoSelection.ts  useTweetTemplates.ts
src/app/lib/: tweetTemplates.ts
src/app/screens/: GalleryScreen.tsx
src/components/: FilterSidebar.tsx  GalleryPhotoCard.tsx  Header.tsx  Icons.tsx  PhotoCard.tsx  PhotoGrid.tsx  PhotoModal.tsx  SettingsModal.tsx  TagMasterModal.tsx  TweetTemplatePanel.tsx
src/config/: runtimeFlags.ts
src/hooks/: useDeferredImageSrc.ts  useGridDimensions.ts  usePhashWorker.ts  usePhotoActions.ts  usePhotos.ts  useScan.ts  useScroll.ts  useSelectedPhotoRefs.ts
src/shared/components/: AnimatedFavoriteStar.module.css  AnimatedFavoriteStar.tsx  HoverTooltip.module.css  HoverTooltip.tsx  Icons.module.css  Icons.tsx
src/shared/hooks/: useToasts.ts
src/shared/models/: types.ts
src/types/: index.ts
src/utils/: photoDisplay.ts
tasks/: todo.md
(+304 files in other folders)
