[package]
name = "alpheratz"
version = "0.1.0"
description = "Alpheratz — Photo manager for STELLAProject Ecosystem"
authors = ["CosmoArtsStore"]
edition = "2021"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
format_push_string = "allow"
semicolon_if_nothing_returned = "allow"
format_collect = "allow"
needless_pass_by_value = "allow"
map_unwrap_or = "allow"
bool_to_int_with_if = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
unnecessary_wraps = "allow"

[lib]
name = "alpheratz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.4", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.38", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.3.5"
image = "0.25.9"
tokio = "1.49.0"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
base64 = "0.22.1"
winreg = "0.52"
opener = { version = "0.8", features = ["reveal"] }
directories = "5.0.1"
urlencoding = "2.1.3"
